--- a/programs/earthquake-insurance-hook/Cargo.toml
+++ b/programs/earthquake-insurance-hook/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "price-validation-transfer-hook"
+name = "earthquake-insurance-hook"
 version = "0.1.0"
+description = "Solana Transfer Hook for Earthquake Insurance"
 edition = "2021"
-description = "Transfer Hook program để xác thực giá dựa trên oracle offchain"
 license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+name = "earthquake_insurance_hook"
 
 [features]
 no-entrypoint = []
@@ -19,7 +20,6 @@ idl-build = ["anchor-lang/idl-build"]
 [dependencies]
 anchor-lang = "0.31.0"
 anchor-spl = "0.31.0"
-# Không sử dụng anchor-spl để tránh xung đột phiên bản
 thiserror = "1.0.43"
 num-derive = "0.4"
 num-traits = "0.2"
